--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Weather App</string>
     <string name="action_settings">Settings</string>
+    <string name="label_temperature_placeholder">%s°</string>
+    <string name="label_temperature">Temperature</string>
 </resources>
