--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,11 @@
     <string name="app_name">Weather App</string>
     <string name="action_settings">Settings</string>
     <string name="label_temperature_placeholder">%s°</string>
+  <string name="label_humidity_placeholder">Humidity: %s</string>
+  <string name="label_pressure_placeholder">Pressure: %s</string>
+  <string name="label_windspeed_placeholder">WindSpeed: %s km/h</string>
     <string name="label_temperature">Temperature</string>
+  <string name="label_locate_me">Locate Me</string>
+  <string name="title_activity_weather_detail">Details</string>
+  <string name="label_wind_direction">Wind Direction:</string>
 </resources>
